--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "morgan": "^1.10.0",
     "multer": "^2.0.2",
     "ngrok": "^5.0.0-beta.2",
+    "node": "^20.19.6",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.15",
     "pdfkit": "^0.17.2",
@@ -41,7 +42,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.11"
   },
   "keywords": [],
   "author": "",
