--- a/.env
+++ b/.env
@@ -26,3 +26,4 @@ COMPANY_NAME=Memorial S.A.
 COMPANY_ADDRESS=Av. Siempreviva 123, San Rafael, Mendoza
 COMPANY_TAX_ID=CUIT 30-12345678-9
 FILES_BASE_DIR=server
+SERVER_PUBLIC_ORIGIN=https://www.api.memorialsanrafael.com.ar/
